<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    tools:context="stumeets.stumeets.LoginActivity">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/login_font_title"
    android:gravity="center"
    android:textColor="@color/white"
    android:layout_marginBottom="@dimen/login_title_margin_bottom"
    android:text="@string/app_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/login_font_normal"
        android:gravity="center"
        android:textColor="@color/stumeet_red"
        android:paddingBottom="@dimen/login_welcome_text_margin_bottom"
        android:text="@string/login_welcome"/>

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_edit_text_box"
        android:padding="@dimen/login_padding"
        android:layout_marginBottom="@dimen/login_input_margin_bottom"
        android:hint="@string/email_hint"
        android:fontFamily="sans-serif-light"
        android:textColorHint="@color/text_hint"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"/>

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_edit_text_box"
        android:padding="@dimen/login_padding"
        android:layout_marginBottom="@dimen/login_input_margin_bottom"
        android:hint="@string/password_hint"
        android:textColorHint="@color/text_hint"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-light"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"/>

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_input_margin_bottom"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/white">
    </TextView>

    <Button
        android:id="@+id/login_signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_button_padding"
        android:layout_marginBottom="@dimen/login_input_margin_bottom"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@drawable/transparent_red_bg"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/login_input_margin_bottom">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".3"
            android:background="@drawable/line_separator"
            />
        <TextView
            android:id="@+id/or_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/white"
            android:layout_weight=".4"
            android:textSize="@dimen/login_font_title"
            android:gravity="center"
            android:textAllCaps="true" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".3"
            android:background="@drawable/line_separator"
            />
    </LinearLayout>
    <Button
        android:id="@+id/login_signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/login_padding"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/transparent_orange_bg" />

</LinearLayout>

